added ignore to ci step for linkedin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,12 +32,12 @@
         {% endif %}
 
         <div style="display: flex; flex-direction: column; gap: 8px;">
-          <a href="https://www.linkedin.com/in/billthan/" target="_blank" style="text-decoration: none; display: flex; align-items: center; gap: 5px;">
+          <a href="{{ site.socials.linkedin }}" target="_blank" style="text-decoration: none; display: flex; align-items: center; gap: 5px;">
               <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="20" height="20" 
                    style="filter: grayscale(100%);">
               <span>/billthan</span>
           </a>
-          <a href="https://github.com/billthan" target="_blank" style="text-decoration: none; display: flex; align-items: center; gap: 5px;">
+          <a href="{{ site.socials.github }}" target="_blank" style="text-decoration: none; display: flex; align-items: center; gap: 5px;">
               <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" width="20" height="20" 
                    style="filter: grayscale(100%);">
               <span>/billthan</span>
